--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ authors = [
 dependencies = [
     "pandas",
     "scikit-learn",
-    "numpy",
+    "numpy==2.4.2",
     "shap",
     "joblib",
     "pyarrow",
