--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
       # -------------------------
       - name: Run tests
         run: |
-          pytest --cov=xai_kit --cov-report=xml --cov-report=term
+          pytest --cov=xaicompare --cov-report=xml --cov-report=term
 
       # -------------------------
       # Upload coverage as artifact (optional)
