update to specify python version

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,6 +6,7 @@ sonar.projectVersion=1.0
 sonar.sources=xaicompare
 sonar.tests=tests
 
+sonar.python.version=3.11,3.12
 sonar.python.coverage.reportPaths=coverage.xml
 
 # optional exclusions
